osha.policy Changelog
=====================

1.3.28 (unreleased)
-------------------

- Nothing changed yet.


1.3.27 (2010-11-21)
-------------------

- Issue #1861: Refactored the Calendar's event provider to not show events from
  the /oshnetwork folder on the main (or other non-oshnetwork) event foldersi [brand]
- Changed subcategories for WHP #1457 [thomasw]


1.3.26 (2010-10-27)
-------------------

- Added 2 External helper methods for synchronising the MC partners platform
  [thomasw]


1.3.25 (2010-10-05)
-------------------

- Since there is a new eventhandler in sc.publications for updating chapters in a translation, 
  we need to overwrite it here too [thomasw]

1.3.24 (2010-09-12)
-------------------

- Overwriting SpeakerView of slc.seminarportal to make sure only canonical
  Speeches are linked [thomasw]
- content_stats: get path from brain and write to db, delete misplaced check
  [reinhardt]


1.3.23 (2010-08-25)
-------------------

- theuni hat einen patch fuer ploneflashupload eingebaut, so dass der
  memcache host aus der product config ausgelesen wird. Habe diesen in unserer
  buildoutconf nachgetragen.
  [pilz]

- Adapter um solr mit queuecatalog kompatibel zu machen.
  [pilz]

- added collective_solr_patch so that we can switch collective.solr and
  collective.indexing back from svn trunk to release eggs. Remove
  src/collective.solr and src/collective.indexing (just to be sure) and run
  buildout [reinhardt]


1.3.22 (2010-07-18)
-------------------

- added allowed interface to lc maintenance view 
  [pilz]


1.3.21 (2010-07-06)
-------------------

- Added Extensions/ws_add_news.py, a helper for xmlrpclib-based upload
  of News Items #1269 (thomasw)
- Added Extensions/ws_partners_helper.py for parsing partners data provided
  my MC in CSV format (thomasw)

1.3.20 (2010-06-26)
-------------------

- generateHW2010pdf: Decreased font sizes and used Paragraph class, fixes
  display of long strings in certain languages #1391 (reinhardt)